--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "type": "magento-module",
   "license": "proprietary",
   "homepage": "https://github.com/mygento/sentry.git",
-  "description": "Magento Sentry PHP and JS integration",
+  "description": "Magento Sentry PHP integration",
   "keywords": [
     "magento",
     "sentry"
@@ -18,17 +18,10 @@
   "require": {
     "magento-hackathon/magento-composer-installer": "3.*",
     "mygento/base": "1.*",
-    "raven/raven": "^0.13.0"
+    "sentry/sentry": "^1.10.0"
   },
   "require-dev": {
-    "squizlabs/php_codesniffer": "2.*",
-    "magento-ecg/coding-standard": "dev-master",
-    "mygento/coding-standard": "1.*",
-    "sebastian/phpdcd": "*",
-    "sebastian/phpcpd": "*",
-    "jakub-onderka/php-parallel-lint": "0.*",
-    "jakub-onderka/php-console-highlighter": "0.*",
-    "phpmd/phpmd": "@stable"
+    "mygento/coding-standard": "1.*"
   },
   "extra": {
     "magento-root-dir": ".",
